Fixed the margin on the footer. Text was overlapping

--- a/styles.scss
+++ b/styles.scss
@@ -439,6 +439,8 @@ h3 {
   #welcome-section {
     height: fit-content;
   }
-}
 
-@media screen and (orientation: landscape) and ()
+  footer {
+    margin-top: 40%;
+  }
+}
